rust/transpiler/snapshots/errors@unclosed_if@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/unclosed_if.hyper
---
This 'if' block is never closed.
