rust/transpiler/snapshots/errors@unclosed_match@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/unclosed_match.hyper
---
This 'match' block is never closed.
