rust/transpiler/snapshots/errors@unclosed_slot@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/unclosed_slot.hyper
---
<{...header}> is never closed.
