rust/transpiler/snapshots/errors@unclosed_try@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/unclosed_try.hyper
---
This 'try' block is never closed.
