rust/transpiler/snapshots/errors@unclosed_while@error.snap
---
source: transpiler/tests/golden_tests.rs
expression: "format!(\"{}\", e)"
input_file: transpiler/tests/errors/unclosed_while.hyper
---
This 'while' block is never closed.
