rust/transpiler/snapshots/expressions@comprehension@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/expressions/comprehension.hyper
---
injections:
  - end: 68
    prefix: "from hyper import escape, replace_markers\n\ndef Comprehension(items: list[str]) -> str:\n    _parts = []\n    _parts.append(f\"\"\"<ul>‹ESCAPE:{"
    start: 33
    suffix: "}›</ul>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 77
    compiled_start: 61
    range_type: Python
    source_end: 16
    source_start: 0
  - compiled_end: 173
    compiled_start: 138
    range_type: Python
    source_end: 68
    source_start: 33
