rust/transpiler/snapshots/expressions@comprehension@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/expressions/comprehension.hyper
---
from hyper import escape, replace_markers

def Comprehension(items: list[str]) -> str:
    _parts = []
    _parts.append(f"""<ul>‹ESCAPE:{[<li>{item}</li> for item in items]}›</ul>""")
    return replace_markers("".join(_parts))
